--- a/Sand/Base.lproj/Main.storyboard
+++ b/Sand/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Bvh-If-g23">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="1Lg-rd-TMk">
     <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
@@ -400,6 +400,74 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="alw-J9-8sy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="650.76923076923072" y="-761.37440758293837"/>
+        </scene>
+        <!--Collection View Controller-->
+        <scene sceneID="Whu-y5-nlL">
+            <objects>
+                <viewController id="1Lg-rd-TMk" customClass="CollectionViewController" customModule="Sand" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="r3d-YP-zrM">
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="tie-r8-bH9">
+                                <rect key="frame" x="0.0" y="122" width="390" height="273"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="CfI-AP-HSh">
+                                    <size key="itemSize" width="150" height="152"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ColCollectionViewCell" id="u8X-JG-CSu" customClass="ColCollectionViewCell" customModule="Sand" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="150" height="152"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="3O2-fi-Rj6">
+                                            <rect key="frame" x="0.0" y="0.0" width="150" height="152"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="z0P-3U-tLY">
+                                                    <rect key="frame" x="0.0" y="0.0" width="80" height="90"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="80" id="HbO-nm-6sR"/>
+                                                        <constraint firstAttribute="height" constant="90" id="J97-Jn-IaJ"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PEc-k5-DnU">
+                                                    <rect key="frame" x="2" y="111" width="94" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="PEc-k5-DnU" firstAttribute="top" secondItem="z0P-3U-tLY" secondAttribute="bottom" constant="21" id="1lh-Sj-nut"/>
+                                                <constraint firstAttribute="trailing" secondItem="PEc-k5-DnU" secondAttribute="trailing" constant="54" id="4p9-jk-BAH"/>
+                                                <constraint firstItem="PEc-k5-DnU" firstAttribute="leading" secondItem="3O2-fi-Rj6" secondAttribute="leading" constant="2" id="epq-U5-OkE"/>
+                                                <constraint firstItem="z0P-3U-tLY" firstAttribute="top" secondItem="3O2-fi-Rj6" secondAttribute="top" id="m5g-Ju-c4W"/>
+                                                <constraint firstItem="z0P-3U-tLY" firstAttribute="leading" secondItem="3O2-fi-Rj6" secondAttribute="leading" id="qSa-Vh-brw"/>
+                                            </constraints>
+                                        </collectionViewCellContentView>
+                                        <size key="customSize" width="150" height="152"/>
+                                        <connections>
+                                            <outlet property="popularImageCell" destination="z0P-3U-tLY" id="why-3a-hrH"/>
+                                            <outlet property="popularLabelCell" destination="PEc-k5-DnU" id="iOM-ZK-M42"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="tRU-Wb-fP3"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <connections>
+                        <outlet property="collectionView" destination="tie-r8-bH9" id="nnQ-0S-rQf"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2Am-5z-l1Y" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1826.1538461538462" y="-775.59241706161129"/>
         </scene>
     </scenes>
     <resources>
